# EnergiBridge

./: CITATION.cf  Cargo.toml  LICENSE  README.md  build.rs  chart.ipynb
.github/workflows/: compile.yml  release.yml
jupyter_energi/: Demo.ipynb  extract_code.py  jupyter_energi.py  temp.csv  temp.py
jupyter_energi/.ipynb_checkpoints/: Demo-checkpoint.ipynb
src/: main.rs  memory.rs  process.rs
src/cpu/: amd.rs  apple.rs  intel.rs  mod.rs  msr.rs
src/cpu/msr/: linux.rs  windows.rs
src/gpu/: amd.rs  apple.rs  mod.rs  nvidia.rs
