[package]
name = "energibridge"
version = "0.0.7"
edition = "2021"
categories = ["os", "energy"]
readme = "README.md"
license = "MIT"

build = "build.rs"

[profile.release]
codegen-units = 1
opt-level = "z"

[build-dependencies]
sysinfo = "0.29"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
nvml-wrapper = "^0.7.0"
nvml-wrapper-sys = "^0.5.0"
sysinfo = "0.29.10"
serde = { version = "1", features = ["derive"] }
once_cell = "1"
thiserror = "1"
itertools = "0.11.0"
ctrlc = { version = "3.2", features = ["termination"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.51"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Media_DeviceManager",
    "Win32_System_Services",
]

[target.'cfg(target_os = "macos")'.dependencies]
smc = "0.2.4"
